# mikan_os_rust

./: CMakeLists.txt  Cargo.toml  Rustに関するメモ.md  x86_64-blog_os.json  xhci_memo.md
.cargo/: config.toml
disk_image/: Cargo.toml
disk_image/src/: lib.rs  main.rs
memo/: MikanOS.md  Rust.md  Segment.md  Xhci.md  ページングメモ.md  メモリ管理.md  技術用語.md
memo/interrupt/: memo.md
mikanos_usb/: Cargo.toml
src/: allocator.rs  asm_func.rs  interrupt.rs  lib.rs  log.rs  main.rs  pci.rs  qemu.rs  serial_port.rs  testable.rs  vga_buffer.rs
src/allocators/: dummy_allocator.rs  global_allocator.rs  mod.rs
src/apic/timer/: mod.rs  timer_manager.rs
src/assembly/: configuration.rs  hlt.rs  interrupt.rs  mod.rs  segmentation.rs
src/cell/: mod.rs  sync_once_cell.rs
src/error/: error.rs  expect_info.rs  kernel_error.rs  mod.rs
src/frame_buffer/: blog_os.rs  mod.rs
src/frame_buffer/pixel/: mod.rs  pixel_color.rs  pixel_writer.rs
src/interrupt/: idt.rs  interrupt.rs  mod.rs
src/interrupt/apic/: mod.rs
src/interrupt/apic/mouse/: mod.rs  mouse_drawer.rs
src/interrupt/apic/timer/: mod.rs  timer_manager.rs
src/interrupt/pic/: mod.rs  timer.rs
src/macros/: debug.rs  deref.rs  mod.rs  print.rs  test.rs
src/memory/: mod.rs
src/memory/allocator/allocators/: mod.rs
src/memory/frame/: bit_map_manager.rs  boot_info.rs  frame_id.rs  frame_init.rs  mod.rs
src/memory/frame/bit_map/: bit_readable.rs  bit_writable.rs  mod.rs
src/memory/heap/: dummy.rs  locked_heap.rs  mod.rs
src/memory/paging/: identity.rs  mod.rs  offset.rs
src/memory/paging/allocator/: boot_info.rs  identity.rs  mod.rs
src/page/frame_allocator/: boot_info.rs  mod.rs
src/paging/: mod.rs
src/paging/frame_allocator/: boot_info.rs  mod.rs
src/paging/page_mapper/: mod.rs
src/segmentation/: gdt.rs  mod.rs
src/spin/: mod.rs  sync_mutex.rs  sync_once_cell.rs
src/task/: executor.rs  mod.rs  simple_executor.rs
src/usb/: mod.rs
src/usb/pci/: capability_header.rs  configuration.rs  mod.rs
src/usb/rings/: command_ring.rs  event_ring.rs  mod.rs
src/usb/xhci/: mapper.rs  mod.rs
src/usb/xhci/controller/: lib_base_controller.rs  mod.rs  port.rs  xhc.rs  zero_base_controller.rs
src/usb/xhci/controller/initialize/: lib_base_initializer.rs  mod.rs
src/usb/xhci/device/: device_context.rs  mod.rs  slot_context.rs  usb_device.rs
src/usb/xhci/device_manager/: device_manager.rs  mod.rs
src/usb/xhci/registers/: capability.rs  create_type.rs  host_controller_registers.rs  mod.rs  register_info.rs
src/usb/xhci/registers/capability/: mod.rs
src/usb/xhci/registers/capability/create/: all_registers.rs  capability_registers_length.rs  create_all_registers.rs  create_cap_length.rs  create_db_off.rs  create_hcc_params1.rs  create_hcc_params2.rs  create_hci_version.rs  create_hcs_params1.rs  create_hcs_params2.rs  create_hcs_params3.rs  create_rts_off.rs  db_off.rs  hcc_params2.rs  hci_version.rs  hcs_params1.rs  hcs_params2.rs  hcs_params3.rs  mod.rs  register_creator.rs  runtime_register_space_offset.rs  vci_version.rs  xhc_params1.rs  xhc_params2.rs  xhc_params3.rs
src/usb/xhci/registers/capability/structs/: capability_register.rs  capability_registers_length.rs  db_off.rs  hcc_params1.rs  hcc_params2.rs  hci_version.rs  hcs_parameters1.rs  hcs_parameters2.rs  hcs_parameters3.rs  mod.rs  rts_off.rs  runtime_register_space_offset.rs  vci_version.rs  xhc_parameters1.rs  xhc_parameters2.rs  xhc_parameters3.rs
src/usb/xhci/registers/creator/: mod.rs  operational_register_create.rs  register_creator.rs
src/usb/xhci/registers/doorbell/: doorbell.rs
src/usb/xhci/registers/doorbells/: doorbell.rs  mod.rs
src/usb/xhci/registers/operational/create/: all_registers.rs  command_ring_control.rs  configure.rs  create_all_registers.rs  create_configure.rs  create_crcr.rs  create_dcbaap.rs  create_dnc.rs  create_page_size.rs  create_usb_cmd.rs  create_usb_sts.rs  device_context_base_array_pointer.rs  device_notify_control.rs  mod.rs  page_size.rs  usb_cmd.rs  usb_sts.rs
src/usb/xhci/registers/operational/structs/: command_ring_control.rs  configure.rs  dcbaap.rs  device_context_base_address_array_pointer.rs  device_notification_control.rs  mod.rs  operational_registers.rs  page_size.rs  port_register_set.rs  port_status_and_control.rs  usb_cmd.rs  usb_sts.rs
src/usb/xhci/registers/operators/create/: command_ring_control.rs  configure.rs  device_context_base_array_pointer.rs  device_notify_control.rs  mod.rs  operationals.rs  page_size.rs  register_creator.rs  usb_cmd.rs  usb_sts.rs
src/usb/xhci/registers/operators/structs/: command_ring_control.rs  configure.rs  device_notification_control.rs  operational_registers.rs  port_status_and_control.rs  usb_sts.rs
src/usb/xhci/registers/read_write/: mod.rs  volatile.rs
src/usb/xhci/registers/runtime/: interrupter_management.rs  micro_frame_index.rs  mod.rs  runtime_register.rs
src/usb/xhci/registers/runtime/create/: create_interrupter_register_set.rs  create_mf_index.rs  create_runtime_registers.rs  mod.rs
src/usb/xhci/registers/runtime/structs/: interrupter_moderation.rs  micro_frame_index.rs  mod.rs  runtime_registers.rs
src/usb/xhci/registers/struct/: mod.rs  register_info.rs
src/usb/xhci/registers/volatile/: core.rs  mod.rs
src/usb/xhci/rings/: command_ring.rs  event_ring.rs  event_ring_segment_table_entry.rs
src/usb/xhci/trb/: NormalTrb.rs  mod.rs  normal_trb.rs  transfer_request_block.rs  trb_base.rs
src/usb_my/pci/: capability_header.rs  configuration.rs
src/usb_my/xhci/: mod.rs
src/usb_my/xhci/controller/: mod.rs  port.rs  xhc.rs
src/usb_my/xhci/device/: device_context.rs  usb_device.rs
src/usb_my/xhci/device_manager/: device_manager.rs
src/usb_my/xhci/registers/: create_type.rs  host_controller_registers.rs  mod.rs
src/usb_my/xhci/registers/capability/: mod.rs
src/usb_my/xhci/registers/operational/: mod.rs
src/usb_my/xhci/registers/volatile/: core.rs  mod.rs
src/usb_my/xhci/rings/: command_ring.rs  event_ring.rs  mod.rs
src/utils/: error.rs  mod.rs  raw_ptr.rs  test_fn.rs
tests/: basic_boot.rs  heap_allocation.rs
(+73 files in other folders)
