[package]
name = "mikan_os_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
volatile = "0.4.5"
spin = "0.9.3"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
xhci = "0.8.4"
bitfield-struct = "0.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
run-args = [
    "-device", "nec-usb-xhci,id=xhci",
    "-device", "usb-mouse",
]



test-success-exit-code = 33
