[package]
name = "mikan_os_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["disk_image"]

[dependencies]
pc-keyboard = "0.5.0"
bootloader = { version = "0.10.12" }
volatile = { version="0.4.5", features = ["unstable"] }
spin = "0.9.3"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
bitfield-struct = "0.1"
bit_field = "0.10.1"
modular-bitfield = "0.11.2"
xhci = "0.8.4"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"




[package.metadata.bootloader]
map-physical-memory = true

# BootImage Version 10.0以前
#[package.metadata.bootimage]
#test-args = [
#    "-device",
#    "isa-debug-exit,iobase=0xf4,iosize=0x04",
#    "-serial", "stdio",
#    "-display", "none",
#    "-device", "nec-usb-xhci,id=xhci",
#    "-device", "usb-mouse",
#]
#run-args = [
#    "-serial", "stdio",
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#    "-device", "nec-usb-xhci,id=xhci",
#    "-device", "usb-mouse",
#    "-gdb", "tcp::3022",
#    "-S"
#]

#    "-device", "usb-mouse",


#test-success-exit-code = 33