[package]
name = "mikan_os_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["disk_image"]

[dependencies]
pc-keyboard = "0.5.0"
bootloader = { version = "0.10.7" }
volatile = { version = "0.4.5", features = ["unstable"] }
spin = "0.9.3"
x86_64 = { version = "0.14.9", features = ["inline_asm"] }
uart_16550 = "0.2.0"
rlibc = "1.0.0"
bitfield-struct = "0.1"
bit_field = "0.10.1"
pic8259 = "0.10.0"

modular-bitfield = "0.11.2"
xhci = "0.8.4"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"

[dependencies.crossbeam-queue]
version = "0.3.5"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[package.metadata.bootloader]
map-physical-memory = true